syntax = "proto3";

message Age {
    uint64 ticks = 1;
}

message Config {
    PrimitiveMap options = 1;
}

message Players {
    map<string, AbsolutePoint> players = 1;
}

message PlayerList {
    repeated string names = 1;
}

message PlayerName {
    string name = 1;
}

message Chunk {
    repeated uint64 voxels = 1;  // 3D array stored as a 1D array

    message Compound {
        Inventory inventory = 1;
        PrimitiveMap properties = 2;
        Point multiblockChunk = 3;
    }
    map<uint32, Compound> compound = 2;

    message EntityAtPoint {
        Point point = 1;
        Entity entity = 2;
    }
    repeated EntityAtPoint entities = 3;

    message ItemAtPoint {
        Point point = 1;
        Item item = 2;
    }
    repeated ItemAtPoint items = 4;
}

message Inventory {
    repeated Item items = 1;
}

message InventorySlot {
    enum ContainerType {
        VOXEL = 0;  // ex: chest
        ENTITY = 1;  // ex: player
        ITEM = 2;  // ex: pouch
    }
    ContainerType containerType = 1;
    AbsolutePoint containerLocation = 2;
    repeated uint32 slots = 3;  // if 2+ slots then the inventory is nested (bags in bags in bags in...)
}

message Entity {
    message Player {
        bool loggedIn = 1;
    }
    message NPC {
        uint32 Algorithm = 1;
    }

    oneof control {
        Player player = 1;
        NPC npc = 2;
    }
    uint32 type = 3;
    PrimitiveMap properties = 4;
    Inventory inventory = 5;
}

message Item {
    message Components {
        repeated Item components = 1;
    }

    uint32 form = 1;
    oneof substance {
        uint32 material = 2;
        Components components = 3;
    }
    PrimitiveMap properties = 4;
    Inventory inventory = 5;

}

message AbsolutePoint {
    Point chunk = 1;
    Point voxel = 2;
}

message Point {
    int64 x = 1;
    int64 y = 2;
    int64 z = 3;
}

message Actions {
    repeated Action actions = 1;
}

message Action {
    message MoveAction {
        AbsolutePoint whereTo = 1;
    }
    message CraftAction {
        uint32 verb = 1;
        AbsolutePoint objectLocation = 2;
        repeated InventorySlot inputs = 3;
        repeated uint32 outputForms = 4;
    }

    string playerName = 1;
    oneof action {
        MoveAction move = 2;
        CraftAction craft = 3;
    }

}

message PrimitiveMap {
    map<string, Primitive> map = 1;
}

message Primitive {
    oneof value {
        string string = 1;
        int64 int = 2;
        bool bool = 3;
        float float = 4;
    }
}

message Nothing {}
